# pipeline-orchestration

./: .gitignore  LICENSE  README.md  exports.sh  pyproject.toml
.devcontainer/: devcontainer.json
dagster_project/: README.md  dagster.yaml  setup.py
dagster_project/dagster_project/: __init__.py  assets.py  constants.py
dagster_project/dagster_project/assets/: airbyte.py  assets.py  dbt.py
dagster_project/storage/local_artifact/storage/: hello_world
db_setup/: README.md
db_setup/scripts/: rbac.sh
db_setup/sql/: rbac.sql
dbt_stocks/: .user.yml  dbt_project.yml  profiles.yml
dbt_stocks/models/marts/: global_superstore.sql
dbt_stocks/models/staging/: _source.yml  stg_superstore__orders.sql  stg_superstore__people.sql  stg_superstore__returns.sql
pipline-app/: package-lock.json  package.json
pipline-app/app/: globals.css  layout.tsx  page.tsx
pipline-app/components/: AnimatedCard.tsx  Tableau.tsx
pipline-app/public/assets/: Dagster.svg:Zone.Identifier
terraform/: .terraform.lock.hcl  destory.sh  main.tf  variables.tf
