[tool.poetry]
name = "pipeline-orchestration"
version = "0.1.0"
description = ""
authors = ["stephenjera <32124927+stephenjera@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "2.0"
dagster = "^1.5.12"
dagster-postgres = "^0.21.12"
setuptools = "^69.0.2"
wheel = "^0.42.0"
dbt-core = "^1.7.3"
dbt-postgres = "^1.7.3"
dagster-webserver = "^1.5.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
